--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="menu_logout_lable">Logout</string>
+    <string name="title_activity_create_post">CreatePostActivity</string>
+    <string name="title_activity_post_message_comments">PostMessageCommentsActivity</string>
 </resources>
