--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,6 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_activity_leagues">Leagues</string>
-    <string name="title_activity_league_teams">Teams</string>
+    <string name="title_activity_leagues">Select League</string>
+    <string name="title_activity_league_teams">Select Teams</string>
 </resources>
