--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_leagues">Select League</string>
     <string name="title_activity_league_teams">Select Teams</string>
+    <string name="title_activity_user_profile">UserProfileActivity</string>
 </resources>
