--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="title_activity_user_profile">UserProfileActivity</string>
     <string name="title_activity_notifications">Notifications</string>
     <string name="title_activity_post_details">PostDetailsActivity</string>
+    <string name="login_twitter">Login with Twitter</string>
 </resources>
