--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,6 @@
     <string name="title_activity_post_details">PostDetailsActivity</string>
     <string name="login_twitter">Login with Twitter</string>
     <string name="post_creator_profile_image_description">post creator profile image</string>
+    <string name="menu_notifications_description">notifications</string>
+    <string name="menu_profile_description">profile</string>
 </resources>
